src/index.css
/* ... */
.blue-button {
  background-color: #009cde;
  color: #ffffff;
}
.blue-text {
  color: #009cde !important;
}


/*.list-container::-webkit-scrollbar-track {*/
  /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
/*}*/

/*.list-container::-webkit-scrollbar-thumb {*/
  /*background-color: darkgrey;*/
  /*outline: 1px solid slategrey;*/
/*}*/
@media (min-width: 1200px) {
  .default-gray-element {
    background-color: #333;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
  }
  #root {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
  }
  /* top bar styles */
  .app-header {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 40px;
    z-index: 2;
  }
  .content-container {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1;
  }

  /* footer styles */
  .app-footer {
    position: absolute;
    bottom: 10px;
    left: 0;
    right: 0;
    display: flex;
    justify-content: center;
    color: #4a4a4a;
    z-index: 0;
  }
  .inner-content-container {
    position: relative;
  }

}
@media (max-width: 600px) and (orientation: portrait) {
  /* misc styles */

  /* choose your bundle page styles */
  /* choose your bundle page styles */
  /* choose your bundle page styles */
  /* choose your bundle page styles */
  /* choose your bundle page styles */
  .card {
    width: 85%;
    margin: 0;
  }
  .service-pack {

  }

  .or {
    font-size: 16px;
    margin: 10px 0;
  }
  .simple-button {
    margin-top: 10px;
  }
  .checkout {
    width: 85% !important;
  }
  .height-equalizer {
    height: 260px;
  }
  .vert-margin-large {
    margin-top: 30px !important;
    margin-bottom: 30px !important;
  }
  .form-card {
    width: 325px;
  }
  #required-popup {
    top: 110px;
    bottom: auto;
  }
  /*.list-item-container {*/
    /*overflow-y: scroll; !* has to be scroll, not auto *!*/
    /*-webkit-overflow-scrolling: touch;*/
  /*}*/
  /* end of choose your bundle page styles */
  /* end of choose your bundle page styles */
  /* end of choose your bundle page styles */

  .back-button {
    display: none;
  }

}

/*.swipe {*/
  /*overflow: hidden;*/
  /*visibility: hidden;*/
  /*position: relative;*/
/*}*/
/*.swipe-wrap {*/
  /*overflow: hidden;*/
  /*position: relative;*/
/*}*/
/*.swipe-wrap > div {*/
  /*float:left;*/
  /*width:100%;*/
  /*position: relative;*/
/*}*/

